# OpenGLFFTWaves

./: .clang-format  .gitignore  CMakeLists.txt  GLWaves.cpp  GLWaves.hpp  Rect.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Spectrum.cpp  Spectrum.hpp  WaveSettings.cpp  WaveSettings.hpp  compile.bat  compile.py  main.cpp  plane.cpp  plane.hpp  readme.md  todo
shaders/: butterfly.comp  combine_tex.comp  conjugate.comp  fft.comp  jonswap_spec.comp  phillips_spec.comp  shader.frag  shader.vert  textured_rect.frag  textured_rect.vert  time_spec.comp  water_shader.frag  water_shader.vert
shaders/compute/: butterfly.comp  combine_tex.comp  conjugate.comp  fft.comp  jonswap_spec.comp  phillips_spec.comp  time_spec.comp
shaders/fragment/: skybox.frag  water_shader.frag
shaders/tessellation/: waterLOD.tesc  waterLOD.tese
shaders/vertex/: skybox.vert  water_shader.vert
